Created user login form and added form to home page

--- a/ecommerce/catalog/templates/catalog/index.html
+++ b/ecommerce/catalog/templates/catalog/index.html
@@ -20,6 +20,11 @@
     <h2>Welcome to Cosmic Commerce</h2>
     <h3>Where you can find the best products in the settled systems</h3>
     <p>lorem ipsum lfdsglkdglkdgldkdvkdjhvkdhk;djfh;kdh;dkjhd;kfhd;kjhfd;kjhd;khjd;kjhfK</p>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Login</button>
+      </form>
 </div>
 
 
