CReated further admin functions, wrote a non performing category function affecting product model requires fix. End session.

--- a/ecommerce/catalog/templates/catalog/base.html
+++ b/ecommerce/catalog/templates/catalog/base.html
@@ -11,6 +11,17 @@
     <header class="site-header">
         <h1>COSMIC COMMERCE</h1>
     </header>
+    <section class="site-nav">
+        <nav>
+            <ul>
+                <li><a href="{% url 'index' %}">Home</a></li>
+                <li><a href="{% url 'products' %}">Products</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Cart</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
+            </ul>
+        </nav>
+    </section>
     {% block content %}
 
 
