--- a/ecommerce/catalog/templates/catalog/products.html
+++ b/ecommerce/catalog/templates/catalog/products.html
@@ -1,7 +1,16 @@
 {% extends 'catalog/base.html' %}
 
-
-
 {% block content %}
-
+<div>
+    {% for product in products %}
+    <div>
+        <h2>{{ product.title }}</h2>
+        <img src="{{ product.image.url }}" alt="{{ product.title }}">
+        <p>{{ product.description }}</p>
+        <p>Price: {{ product.price }}</p>
+    </div>
+    {% empty %}
+    <p>No products available.</p>
+    {% endfor %}
+</div>
 {% endblock %}
