--- a/ecommerce/catalog/templates/catalog/products.html
+++ b/ecommerce/catalog/templates/catalog/products.html
@@ -1,16 +1,23 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<div>
+
+<div class="product-list">
     {% for product in products %}
-    <div>
-        <h2>{{ product.title }}</h2>
-        <img src="{{ product.image.url }}" alt="{{ product.title }}">
-        <p>{{ product.description }}</p>
-        <p>Price: {{ product.price }}</p>
+    <div class="product-item">
+        <h2 class="product-title">{{ product.title }}</h2>
+        <img class="product-image" src="{{ product.image.url }}" alt="{{ product.title }}">
+        <p class="product-description">{{ product.description }}</p>
+        <p class="product-price">Price: {{ product.price }}</p>
+        <form method="post" action="{% url 'add_to_basket' product.id %}">
+            {% csrf_token %}
+            <input type="hidden" name="product_id" value="{{ product.id }}">
+            <button type="submit" class="add-to-basket">Add to Basket</button>
+        </form>
     </div>
     {% empty %}
-    <p>No products available.</p>
+    <p class="no-products">No products available.</p>
     {% endfor %}
 </div>
+
 {% endblock %}
