--- a/ecommerce/catalog/templates/catalog/checkout.html
+++ b/ecommerce/catalog/templates/catalog/checkout.html
@@ -23,19 +23,26 @@
         </nav>
     </section>
 
-    <h2>Checkout</h2>
-    <ul>
-        {% for item in basket.basketitem_set.all %}
-            <li>
-                <h3>{{ item.product.title }}</h3>
-                <p>Price: {{ item.product.price }}</p>
-                <p>Quantity: {{ item.quantity }}</p>
-            </li>
-        {% empty %}
-            <li>Your basket is empty</li>
-        {% endfor %}
-    </ul>
-    <p>Total price: {{ basket.get_total_price }}</p>
+    <div class="checkout-basket">
+        <h2>Checkout</h2>
+        <ul>
+            {% for item in basket.basketitem_set.all %}
+                <li>
+                    <h3>{{ item.product.title }}</h3>
+                    <p>Price: {{ item.product.price }}</p>
+                    <p>Quantity: {{ item.quantity }}</p>
+                    <form method="post" action="{% url 'remove_from_basket' item.id %}">
+                        {% csrf_token %}
+                        <input type="submit" value="Remove">
+                    </form>
+                </li>
+            {% empty %}
+                <li>Your basket is empty</li>
+            {% endfor %}
+        </ul>
+        <p>Total price: {{ basket.get_total_price }}</p>
+        <a href="" class="confirm-basket-button">Confirm Basket?</a>
+    </div>
 
 
     <!-- Include JavaScript file -->
