--- a/ecommerce/catalog/templates/catalog/checkout.html
+++ b/ecommerce/catalog/templates/catalog/checkout.html
@@ -41,7 +41,7 @@
             {% endfor %}
         </ul>
         <p>Total price: {{ basket.get_total_price }}</p>
-        <a href="" class="confirm-basket-button">Confirm Basket?</a>
+        <a href="{% url 'payment' %}" class="confirm-basket-button">Confirm Basket?</a>
     </div>
 
 
