--- a/ecommerce/catalog/templates/catalog/payment.html
+++ b/ecommerce/catalog/templates/catalog/payment.html
@@ -23,25 +23,47 @@
         </nav>
     </section>
 
-    <!-- Payment Form -->
-    <form action="{% url 'charge' %}" method="post" id="payment-form">
-        {% csrf_token %}
-        <div class="form-row">
-            <label for="card-element">
-                Credit or debit card
-            </label>
-            <div id="card-element">
+    <!-- Checkout Basket -->
+    <div class="checkout-basket">
+        <h2>Checkout</h2>
+        <ul>
+            {% for item in basket.basketitem_set.all %}
+                <li>
+                    <h3>{{ item.product.title }}</h3>
+                    <p>Price: {{ item.product.price }}</p>
+                    <p>Quantity: {{ item.quantity }}</p>
+                    <form method="post" action="{% url 'remove_from_basket' item.id %}">
+                        {% csrf_token %}
+                        <input type="submit" value="Remove">
+                    </form>
+                </li>
+            {% empty %}
+                <li>Your basket is empty</li>
+            {% endfor %}
+        </ul>
+        <p>Total price: {{ basket.get_total_price }}</p>
+        <form action="{% url 'charge' %}" method="post" id="payment-form">
+            {% csrf_token %}
+            <div class="form-row">
+                <label for="card-element">
+                    Credit or debit card
+                </label>
+                <div id="card-element">
+                </div>
+    
+                <!-- In case of payment form errors. -->
+                <div id="card-errors" role="alert"></div>
             </div>
+    
+            <button>Submit Payment</button>
+    </div>
 
-            <!-- In case of payment form errors. -->
-            <div id="card-errors" role="alert"></div>
-        </div>
-
-        <button>Submit Payment</button>
-
-    <!-- Include JavaScript file -->
-    <script src="{% static 'catalog/js/script.js' %}"></script>
+    <!-- Payment Form -->
+    
     <!-- Stripe.js Library -->
     <script src="https://js.stripe.com/v3/"></script>
+    <!-- Include JavaScript file -->
+    <script type="module" src="{% static 'catalog/js/script.js' %}"></script>
+    
 </body>
 </html>
