--- a/ecommerce/catalog/templates/catalog/payment.html
+++ b/ecommerce/catalog/templates/catalog/payment.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Confirm & Pay</title>
     <!-- Include CSS file -->
     <link rel="stylesheet" type="text/css" href="{% static 'catalog/css/style.css' %}">
