--- a/ecommerce/catalog/templates/catalog/base.html
+++ b/ecommerce/catalog/templates/catalog/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>Cosmic Commerce</title>
     <!-- Include CSS file -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'catalog/css/style.css' %}">
 </head>
 <body>
@@ -41,6 +42,8 @@
 
 
     <!-- Include JavaScript file -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'catalog/js/script.js' %}"></script>
 </body>
 </html>
