--- a/ecommerce/catalog/templates/catalog/base.html
+++ b/ecommerce/catalog/templates/catalog/base.html
@@ -15,11 +15,12 @@
     <section class="site-nav">
         <nav>
             <ul>
+                
                 <li><a href="{% url 'index' %}">Home</a></li>
                 <li><a href="{% url 'register' %}">Register</a></li>
                 <li><a href="{% url 'products' %}">Products</a></li>
                 <li><a href="{% url 'checkout' %}">Checkout</a></li>
-                
+                <li><a href="{% url 'reviews' %}">Reviews</a></li>
             </ul>
         </nav>
     </section>
@@ -42,6 +43,7 @@
 
 
     <!-- Include JavaScript file -->
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'catalog/js/script.js' %}"></script>
