--- a/ecommerce/catalog/templates/catalog/products.html
+++ b/ecommerce/catalog/templates/catalog/products.html
@@ -6,6 +6,7 @@
     {% for product in products %}
     <div class="product-item">
         <h2 class="product-title">{{ product.title }}</h2>
+        <p class="product-category">Category: {{ product.category.name }}</p>
         <img class="product-image" src="{{ product.image.url }}" alt="{{ product.title }}">
         <p class="product-description">{{ product.description }}</p>
         <p class="product-price">Price: {{ product.price }}</p>
