Successfully fixed review title render, receiving correcting data from admin panel

--- a/ecommerce/catalog/templates/catalog/reviews.html
+++ b/ecommerce/catalog/templates/catalog/reviews.html
@@ -2,5 +2,9 @@
 
 {% block content %}
 
-
+<select id="product_id" name="product_id">
+    {% for product in products %}
+        <option value="{{ product.id }}">{{ product.title }}</option>
+    {% endfor %}
+</select>
 {% endblock %}
