--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -176,3 +176,9 @@ body {
     padding-left: 50px;
     background-color: #f0f0f0;
 }
+
+.product-reviews {
+    padding-left: 50px;
+    padding-top: 20px;
+    background-color: beige;
+}
