--- a/ecommerce/catalog/templates/catalog/base.html
+++ b/ecommerce/catalog/templates/catalog/base.html
@@ -19,6 +19,7 @@
                 <li><a href="{% url 'index' %}">Home</a></li>
                 <li><a href="{% url 'register' %}">Register</a></li>
                 <li><a href="{% url 'products' %}">Products</a></li>
+                <li><a href="{% url 'reviews' %}">Reviews</a></li>
                 <li><a href="{% url 'checkout' %}">Checkout</a></li>
             </ul>
         </nav>
