--- a/ecommerce/catalog/templates/catalog/base.html
+++ b/ecommerce/catalog/templates/catalog/base.html
@@ -4,8 +4,10 @@
 <head>
     <title>Cosmic Commerce</title>
     <!-- Include CSS file -->
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'catalog/css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
     <!-- Content of the page -->
@@ -39,8 +41,12 @@
 
     {% endblock %}
 
-    <!-- Add this inside your base.html file -->
-
+    <footer class="site-footer">
+        <a href="https://github.com" target="_blank"><i class="bi bi-github"></i> GitHub</a>
+        <a href="https://twitter.com" target="_blank"><i class="bi bi-twitter"></i> Twitter</a>
+        <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i> Facebook</a>
+        <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i> Instagram</a>
+    </footer>
 
     <!-- Include JavaScript file -->
     <script src="https://js.stripe.com/v3/"></script>
