--- a/ecommerce/catalog/templates/catalog/register.html
+++ b/ecommerce/catalog/templates/catalog/register.html
@@ -3,10 +3,13 @@
 
 
 {% block content %}
+
+<div class="user-registration">
 <h2>Register</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Register</button>
 </form>
+</div>
 {% endblock %}
