--- a/ecommerce/catalog/templates/catalog/reviews.html
+++ b/ecommerce/catalog/templates/catalog/reviews.html
@@ -4,7 +4,7 @@
 
 <!-- Product review form -->
 <div class="review-form">
-    <form method="POST" action="{% url 'create_review' %}">
+    <form method="POST" action="{% url 'create_review' %}" id="reviewForm">
         {% csrf_token %}
         <label for="product_id">Product:</label><br>
         <select id="product_id" name="product_id">
@@ -13,7 +13,7 @@
             {% endfor %}
         </select><br>
         <label for="rating">Rating:</label><br>
-        <input type="text" id="rating" name="rating"><br>
+        <input type="number" id="rating" name="rating" min="1" max="10"><br>
         <label for="comment">Comment:</label><br>
         <textarea id="comment" name="comment"></textarea><br>
         <input type="submit" value="Submit">
