--- a/ecommerce/catalog/templates/catalog/index.html
+++ b/ecommerce/catalog/templates/catalog/index.html
@@ -24,6 +24,28 @@
   </div>
 {% endif %}
 
+<!-- Image Carousel-->
+
+<div class="container">
+  <div class="slider">
+    <div class="box1">
+    </div>
+    <div class="box2">
+    </div>
+    <div class="box3">
+    </div>
+    <div class="box4">
+    </div>
+    <div class="box5">
+    </div>
+    <div class="box6">
+    </div>
+    <div class="box7">
+    </div>
+  </div>
+</div>
+<div id="test"></div>
+
 <!-- Featured Products -->
 <div class="featured-product-title">
   <h2>FEATURED INVENTORY</h2>
@@ -31,7 +53,7 @@
 </div>
 
 <div class="featured-products">
-  {% for product in featured_products %}
+  {% for product in featured_products|slice:":3" %}
     <div class="product">
       <h3>{{ product.title }}</h3> 
       <img src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -50,7 +72,7 @@
 </div>
 
 <div class="legendary-products">
-  {% for product in legendary_products %}
+  {% for product in legendary_products|slice:":3" %}
     <div class="legendary-product">
       <h3>{{ product.title }}</h3> 
       <img src="{{ product.image.url }}" alt="{{ product.name }}">
