--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 body {
     background-color: rgb(54, 20, 88);
@@ -9,8 +11,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 250px;
-    font-family: "Luckiest Guy", cursive;
-    font-weight: 400;
+    font-family: "Exo 2", sans-serif;
+    font-weight: bold; 
     font-style: normal;
     font-size: 50px;
     color: white;
@@ -21,16 +23,14 @@ body {
     transition: filter 2s ease-in-out;
 }
 
-/* Styling for the index page */
-
-/* index nav bar */
+/* Nav bar */
 
 .site-nav ul {
     list-style: none;
     display: flex;
     justify-content: space-around;
     padding: 0;
-    font-family: 'Luckiest Guy', cursive;
+    font-family: "Exo 2", sans-serif;
 }
 
 .site-nav li {
@@ -56,6 +56,9 @@ body {
     color: #000;
 }
 
+/* Logout function styling */
+
+
 /* basket styling */
 
 .basket-info {
@@ -65,8 +68,9 @@ body {
     padding: 20px;
     border: 1px solid #000;
     border-radius: 5px;
-    font-family: 'Luckiest Guy', cursive;
+    font-family: "Exo 2", sans-serif;
     color: rgb(19, 1, 48);
+    z-index: 1000;
 }
 
 .basket-info p {
@@ -77,16 +81,165 @@ body {
 
 .index-page-welcome {
     display: flex;
-    justify-content: flex-start;
-    align-items: left;
     flex-direction: column;
-    width: 50%; 
-    padding-left: 20px; 
-    background-color: white; 
-    color: rgb(19, 1, 48); 
-    font-family: 'Luckiest Guy', cursive; 
+    align-items: flex-start;
+    width: 25%;
+    padding: 10px;
+    background: white;
+    color: rgb(19, 1, 48);
+    font-family: "Exo 2", sans-serif;
     margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
+
+/* user greeting styling */
+
+.user-greeting {
+    font-family: "Exo 2", sans-serif;
+    background-color: white;
+    max-width: 200px;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+/* image carousel styling */
+
+.container{
+    width:100vw;
+    height:80vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+  }
+  .slider {
+    height: 750px;
+    width:100vw;
+    display: flex;
+    perspective: 1000px;
+    position: relative;
+    align-items:center;
+  }
+  .box1 {      
+    background:url('../images/Dyson-portal-Legendary.JPG');
+    background-size:cover;
+    background-position:center center;}
+  .box2{
+  background:url('../images/Predator-armor-Legendary.JPG');
+    background-size:cover;
+    background-position:center center;}
+  .box3{
+  background:url('../images/Mining-enging-Legendary.JPG');
+    background-size:cover;
+    background-position:center center;}
+  .box4{
+  background:url('../images/NASA-EVA-Legendary.JPG');
+    background-size:cover;
+    background-position:center center;}
+  .box5{
+  background:url('../images/prometheus-ship.jpeg');
+    background-size:cover;
+    background-position:center center;}
+  .box6{
+  background:url('../images/star-citizen-ship1.png');
+    background-size:cover;
+    background-position:center center;}
+  .box7{
+  background:url('../images/star-citizen-EVA-suit.webp');
+    background-size:cover;
+    background-position:center center;}
+  
+  .slider [class*="box"] {
+  /*   float: left; */
+    overflow: hidden;
+    border-radius:20px;
+    transition: all 1s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+      position:absolute;
+  }
+  .slider [class*="box"]:nth-child(7),
+  .slider [class*="box"]:nth-child(1) {
+    width: 100vh;
+    height: 60vh;
+    transform: scale(0.2) translate(-50%,-50%);
+    top: 10%;
+    z-index:1;
+  }
+  .slider [class*="box"]:nth-child(2),
+  .slider [class*="box"]:nth-child(6) {
+    width: 100vh;
+    height: 60vh;
+    transform: scale(0.4) translate(-50%,-50%);
+    top: 20%;
+    z-index:2;
+  }
+  .slider [class*="box"]:nth-child(3),
+  .slider [class*="box"]:nth-child(5) {
+    width: 100vh;
+    height: 60vh;
+    transform: scale(0.6) translate(-50%,-50%);
+    top: 30%;
+    z-index:3;
+  }
+  .slider [class*="box"]:nth-child(4) {
+    width: 60vw;
+    height: 60vh;
+    border-color: #c92026;
+    color: #fff;
+    transform: scale(1) translate(-50%,-50%);
+    top: 50%;
+    z-index:4;
+  }
+  .slider [class*="box"]:nth-child(1){
+    left:-13%;}
+  .slider [class*="box"]:nth-child(2){
+    left:-5%;}
+  .slider [class*="box"]:nth-child(3){
+    left:10%;}
+  .slider [class*="box"]:nth-child(4){
+    left:50%;}
+  .slider [class*="box"]:nth-child(5){
+    left:71%;}
+  .slider [class*="box"]:nth-child(6){
+    left:85%;}
+  .slider [class*="box"]:nth-child(7){
+    left:100%;}
+  .slider .firstSlide {
+      -webkit-animation:  firstChild 1s;
+      animation:  firstChild 1s;
+  }
+  /*Animation for buyers landing page slider*/
+  @-webkit-keyframes firstChild {
+      0% {left:100%; transform: scale(0.2) translate(-50%,-50%);}
+      100% {left: -13%; transform: scale(0.2) translate(-50%,-50%);}
+  }
+  @keyframes firstChild {
+     0% {left:100%; transform: scale(0.2) translate(-50%,-50%);}
+      100% {left: -13%; transform: scale(0.2) translate(-50%,-50%);}
+  }
+
+/* featured product styling */
+
+.featured-product-title {
+    font-family: "Exo 2", sans-serif;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    padding: 10px;
+    background-size: cover; ;
+    background-repeat: no-repeat;
+}
+
+
+/* styling for register page */
+
+.user-registration {
+    background-color: white;
+    padding: 20px;
+    margin: 0 auto;
+    width: 50%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
 
 /* Styling for the product page */
 
@@ -115,13 +268,74 @@ body {
     font-weight: bold;
 }
 
+/* Featured products styling */
+
+.featured-products {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+
+.featured-products .product {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: calc(20% - 20px); 
+    height: 400px;
+    overflow: auto;
+}
+
+.featured-products img {
+    width: 200px; 
+    height: auto;
+}
+
+/* Legendary Products styling */
+.legendary-products-title {
+    font-family: "Exo 2", sans-serif;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    padding: 10px;
+    background-size: cover; ;
+    background-repeat: no-repeat;
+}
+
+.legendary-products {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.legendary-products .legendary-product {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: calc(20% - 20px); 
+    height: 400px;
+    overflow: auto;
+}
+
+.legendary-products img {
+    width: 200px; 
+    height: auto;
+}
 /* Checkout page styling */
 
 /* Checkout basket styling */
 .checkout-basket {
     background-color: white;
     color: black;
-    font-family: 'Protest Sans', sans-serif;
+    font-family: "Exo 2", sans-serif;
     width: 50%; 
     margin: 0 auto; 
     padding: 20px;
@@ -188,4 +402,13 @@ body {
 .edit-review-form {
     padding-left: 50px;
     background-color: #f0f0f0;
+}
+
+.site-footer {
+    background-color: rgb(54, 20, 88);
+    color: white;
+    text-align: center;
+    padding: 20px;
+    font-family: "Exo 2", sans-serif;
+    font-size: 20px;
 }
