--- a/ecommerce/catalog/templates/catalog/index.html
+++ b/ecommerce/catalog/templates/catalog/index.html
@@ -26,7 +26,7 @@
 
 <!-- Image Carousel-->
 
-<div class="container">
+<div class="carousel-container">
   <div class="slider">
     <div class="box1">
     </div>
