--- a/ecommerce/catalog/templates/catalog/base.html
+++ b/ecommerce/catalog/templates/catalog/base.html
@@ -26,6 +26,8 @@
         </nav>
     </section>
 
+    <div id="particles-js"></div>
+
     <div class="basket-info">
         {% if basket %}
             <p>User: {{ request.user.username }}</p>
@@ -47,10 +49,20 @@
         <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i> Instagram</a>
     </footer>
 
-    <!-- Include JavaScript file -->
-    <script src="https://js.stripe.com/v3/"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'catalog/js/script.js' %}"></script>
+<!-- ... -->
+
+<!-- Include JavaScript file -->
+<script src="https://js.stripe.com/v3/"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+<!--Particles.js-->
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+
+<script>
+    var particlesJsonUrl = "{% static 'catalog/js/particles.json' %}";
+  </script>
+  
+<script src="{% static 'catalog/js/script.js' %}"></script>
+
 </body>
 </html>
