--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -1,20 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
+
 
 
 body {
-    background-color: rgb(54, 20, 88);
+    background-color: rgb(33, 29, 42);
+    margin: 0;
 }
 
-.particles-js {
+#particles-js {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: -1; 
     background-size: cover;
-  }
+}
   
   
 .site-header {
@@ -92,6 +94,7 @@ body {
 /* index main content */
 
 .index-page-welcome {
+    font-family: "Orbitron", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -107,6 +110,7 @@ body {
 
 /* user greeting styling */
 .image-greeting-flex-container {
+    font-family: "Orbitron", sans-serif;
     display: flex;
     align-items: flex-start;
 }
