--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
     background-color: rgb(33, 29, 42);
@@ -34,42 +32,49 @@ body {
     align-items: center;
     justify-content: center;
     transition: filter 2s ease-in-out;
+    opacity: 0.8;
 }
 
 /* Nav bar */
 
 .site-nav ul {
+    font-family: "Quantico", sans-serif;
     list-style: none;
     display: flex;
     justify-content: space-around;
     padding: 0;
-    font-family: "Exo 2", sans-serif;
+    position: relative;
+    z-index: 4;
+    opacity: 0.7;
 }
 
 .site-nav li {
     background-color: #f2f2f2;
     border: 1px solid #000;
-    padding: 20px 40px; /* Increase padding */
-    margin: 5px; /* Reduce margin */
+    padding: 18px 36px; 
+    margin: 5px; 
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    width: 200px; /* Increase width */
-    height: 100px; /* Increase height */
+    width: 180px; 
+    height: 90px; 
     display: flex; 
     justify-content: center; 
     align-items: center; 
 }
 
 .site-nav li:hover {
-    background-color: #dc6d6d;
+    background-color: #0f0736;
 }
 
 .site-nav a {
     text-decoration: none;
     color: #000;
-    font-size: 2em; /* Increase font size */
+    font-size: 1.8em; 
 }
 
+.site-nav a:hover {
+    color: white;
+}
 /* Logout function styling */
 
 
@@ -91,37 +96,6 @@ body {
     margin: 0 0 10px;
 }
 
-/* index main content */
-
-.index-page-welcome {
-    font-family: "Orbitron", sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 25%;
-    padding: 10px;
-    background: white;
-    color: rgb(19, 1, 48);
-    font-family: "Exo 2", sans-serif;
-    margin-top: 50px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-}
-
-/* user greeting styling */
-.image-greeting-flex-container {
-    font-family: "Orbitron", sans-serif;
-    display: flex;
-    align-items: flex-start;
-}
-
-.user-greeting {
-    font-family: "Exo 2", sans-serif;
-    background-color: white;
-    max-width: 200px;
-    border-radius: 5px;
-    padding: 10px;
-}
 
 /* image carousel styling */
 
@@ -133,9 +107,10 @@ body {
     align-items:center;
     position: relative;
     z-index: 2;
-    margin: auto;
+    margin: auto; /* This will center the carousel */
     overflow: hidden;
     flex-grow: 1;
+    margin-top: -8% ;
 }
 .slider [class*="box"] {
     /*   float: left; */
@@ -157,7 +132,7 @@ body {
     background-position:center center;
 }
 .box3 {
-    background:url('../images/Mining-enging-Legendary.JPG');
+    background:url('../images/Mining-engine-Legendary.JPG');
     background-position:center center;
 }
 .box4 {
@@ -173,7 +148,7 @@ body {
     background-position:center center;
 }
 .box7 {
-    background:url('../images/star-citizen-EVA-suit.webp');
+    background:url('../images/beta2-mining-droid.JPG');
     background-position:center center;
   }
   
@@ -245,10 +220,38 @@ body {
       100% {left: -13%; transform: scale(0.2) translate(-50%,-50%);}
 }
 
+/* index main content */
+
+.index-page-welcome {
+    font-family: "Exo 2", sans-serif;
+    background-color: white;
+    max-width: 210px;
+    border-radius: 5px;
+    padding: 10px;
+    position: fixed; 
+    top: 48vh; 
+    left: 1vw; 
+    z-index: 3;
+}
+
+/* User Greeting styling */
+
+.user-greeting {
+    font-family: "Exo 2", sans-serif;
+    background-color: white;
+    max-width: 180px;
+    border-radius: 5px;
+    padding: 10px;
+    position: fixed;
+    top: 400px; /* adjust as needed */
+    left: 1vw; 
+    z-index: 3;
+}
+
 /* featured product styling */
 
 .featured-product-title {
-    font-family: "Exo 2", sans-serif;
+    font-family: "Quantic", sans-serif;
     color: white;
     font-size: 30px;
     text-align: center;
@@ -298,13 +301,25 @@ body {
 
 /* Featured products styling */
 
+.featured-product-title {
+    font-family: "Quantico", sans-serif;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    padding: 10px;
+    background-size: cover; ;
+    background-repeat: no-repeat;
+}
+
 .featured-products {
+    font-family: "Quantico", sans-serif;
     position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     max-height: 400px;
     overflow-y: auto;
+    z-index: 4;
 }
 
 
@@ -325,7 +340,7 @@ body {
 
 /* Legendary Products styling */
 .legendary-products-title {
-    font-family: "Exo 2", sans-serif;
+    font-family: "Quantico", sans-serif;
     color: white;
     font-size: 30px;
     text-align: center;
@@ -335,12 +350,14 @@ body {
 }
 
 .legendary-products {
+    font-family: "Quantico", sans-serif;
     position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     max-height: 400px;
     overflow-y: auto;
+    z-index: 4;
 }
 
 .legendary-products .legendary-product {
