--- a/ecommerce/catalog/templates/catalog/products.html
+++ b/ecommerce/catalog/templates/catalog/products.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 
+{% for Category in categories %}
 <div class="product-list">
-    {% for product in products %}
+    {% for product in Category.products %}
     <div class="product-item">
         <h2 class="product-title">{{ product.title }}</h2>
-        <p class="product-category">Category: {{ product.category.name }}</p>
+        <p class="product-category">Category: {{ Category.name }}</p>
         <img class="product-image" src="{{ product.image.url }}" alt="{{ product.title }}">
         <p class="product-description">{{ product.description }}</p>
         <p class="product-price">Price: {{ product.price }}</p>
@@ -17,8 +18,9 @@
         </form>
     </div>
     {% empty %}
-    <p class="no-products">No products available.</p>
+    <p class="no-products">No products available in this category.</p>
     {% endfor %}
 </div>
+{% endfor %}
 
 {% endblock %}
