--- a/ecommerce/catalog/templates/catalog/index.html
+++ b/ecommerce/catalog/templates/catalog/index.html
@@ -18,6 +18,7 @@
 <div id="test"></div>
 
 
+<!-- User authenticate and greeting section -->
 
   {% if user.is_authenticated %}
     <div class="user-greeting">
@@ -78,6 +79,25 @@
   {% endfor %}
 </div>
 
+<!-- Further Information-->
+
+<section class="further-info">
+  <h2>Further Information</h2>
+  <p>For more information on our products, please visit our <a href="{% url 'products' %}">products page</a>.</p>
+  <p>For reviews on our products, please visit our <a href="{% url 'reviews' %}">reviews page</a>.</p>
+  <p>To get in touch, please drop us a message using our in house messaging service below!</p>
+</section>
+
+
+<!-- Contact Form -->
+<section class="site-contact-form">
+  <h2>Contact Us</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ contact_form.as_p }}
+    <button type="submit">Send</button>
+  </form>
+</section>
 
 
 {% endblock %}
