--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -88,12 +88,12 @@ body {
 .basket-info {
     position: fixed;
     right: 0;
-    background-color: white;
+    background-color: rgb(68, 37, 117);
     padding: 20px;
     border: 1px solid #000;
     border-radius: 5px;
     font-family: "Exo 2", sans-serif;
-    color: rgb(19, 1, 48);
+    color: white;
     z-index: 1000;
 }
 
@@ -112,7 +112,7 @@ body {
     align-items:center;
     position: relative;
     z-index: 2;
-    margin: auto; /* This will center the carousel */
+    margin: auto; 
     overflow: hidden;
     flex-grow: 1;
     margin-top: -8% ;
@@ -229,7 +229,9 @@ body {
 
 .index-page-welcome {
     font-family: "Exo 2", sans-serif;
-    background-color: white;
+    color: white;
+    text-align: center;
+    background-color: rgb(68, 37, 117);
     max-width: 210px;
     border-radius: 5px;
     padding: 10px;
@@ -243,7 +245,9 @@ body {
 
 .user-greeting {
     font-family: "Exo 2", sans-serif;
-    background-color: white;
+    color: white;
+    text-align: center;
+    background-color: rgb(68, 37, 117);
     max-width: 180px;
     border-radius: 5px;
     padding: 10px;
@@ -269,11 +273,13 @@ body {
 /* styling for register page */
 
 .user-registration {
+    font-family: "Quantico", sans-serif;
     background-color: white;
     padding: 20px;
     margin: 0 auto;
     width: 50%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    opacity: 0.9;
 }
 
 
@@ -287,11 +293,13 @@ body {
 }
 
 .product-item {
+    font-family: "Quantico", sans-serif;
     background-color: white;
     margin: 10px;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: calc(33.33% - 20px);
+    width: calc(20% - 20px); 
+    opacity: 0.9;
 }
 
 .product-image {
@@ -345,6 +353,7 @@ body {
 
 /* Legendary Products styling */
 .legendary-products-title {
+    margin-top: 50px;
     font-family: "Quantico", sans-serif;
     color: white;
     font-size: 30px;
@@ -395,7 +404,7 @@ body {
 /* Contact form styling */
 
 .site-contact-form {
-    font-family: "Exo 2", sans-serif;
+    font-family: "Quantico", sans-serif;
     background-color: white;
     padding: 20px;
     margin: 0 auto;
@@ -405,6 +414,11 @@ body {
     justify-content: center;
     margin-bottom: 200px;
     border-radius: 5px;
+}
+
+.site-contact-form input, .site-contact-form textarea {
+    width: 100%;  
+    box-sizing: border-box;  
 }
 
 /* Checkout page styling */
@@ -468,17 +482,42 @@ body {
 }
 
 
-/* Styling for the reviews page */
+/* Styling for the Reviews page */
 
 .review-form {
+    font-family: "Quantico", sans-serif;
     padding-left: 50px;
     background-color: #f0f0f0;
+    width: 35%; 
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
 }
 
+.review-form textarea {
+    width: 400px; 
+    height: 200px; 
+}
+
+/* Styling for the Submitted User Reviews */
+
 .product-reviews {
+    font-family: "Quantico", sans-serif;
+    color: white;
     padding-left: 50px;
     padding-top: 20px;
-    background-color: beige;
+    background-color: rgb(16, 10, 44);
+    max-width: 50%;
+    margin: 10px 0;
+    opacity: 0.9;
+
+}
+
+.product-reviews img {
+    width: 200px;  /* Set the width of the image */
+    height: auto;  /* Set the height of the image to auto to maintain aspect ratio */
+    display: block;  /* Display the image as a block element */
+    margin: 0 auto;  /* Center the image horizontally */
 }
 
 /* Styling for the edit review page */
