--- a/ecommerce/catalog/templates/catalog/index.html
+++ b/ecommerce/catalog/templates/catalog/index.html
@@ -22,7 +22,7 @@
 
   {% if user.is_authenticated %}
     <div class="user-greeting">
-      <h2>Welcome, {{ user.username }}!</h2>
+      <h2>Welcome: {{ user.username }}</h2>
       <form action="{% url 'logout' %}" method="post">
         {% csrf_token %}
         <button type="submit">Logout</button>
