--- a/ecommerce/catalog/templates/catalog/reviews.html
+++ b/ecommerce/catalog/templates/catalog/reviews.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
+<section class="review-page-title">
+    <h2>CHECK OUT SOME OF OUR REVIEWS COURTESY OF FELLOW EXPLORERS</h2><i class="fas fa-space-shuttle"></i>
+    <p>And feel free to leave a review of your favorite product!</p>
+</section>
+
 <!-- Product review form -->
 <div class="review-form">
     <form method="POST" action="{% url 'create_review' %}" id="reviewForm">
