Fixed JS syntax and loading errors, amended particles function and review form function

--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -577,6 +577,6 @@ body {
 }
 
 .site-footer a {
-    margin-right: 10px; /* Add this line */
-    margin-left: 10px; /* Add this line */
+    margin-right: 10px; 
+    margin-left: 10px; 
 }
