--- a/ecommerce/catalog/templates/catalog/base.html
+++ b/ecommerce/catalog/templates/catalog/base.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <title>Cosmic Commerce</title>
+    <!-- Set viewport for responsive design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Include CSS file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
