--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -433,18 +433,17 @@ body {
     width: 200px; 
     height: auto;
 }
-/* CSS for mobile and small devices */
-/* CSS for mobile and small devices */
+/* CSS for mobile and small devices displaying the top 2 features*/
 @media only screen and (max-width: 480px) {
     .featured-products {
-        justify-content: flex-start; /* Align items along the start line */
+        justify-content: flex-start; 
     }
     .featured-products .product {
-        width: 50%; /* Two products per row */
-        box-sizing: border-box; /* Include padding and border in element's total width and height */
+        width: 50%; 
+        box-sizing: border-box; 
     }
     .featured-products .product:nth-child(n+3) {
-        display: none; /* Hide all products except the first two */
+        display: none; 
     }
 }
 /* Legendary Products styling */
@@ -484,6 +483,20 @@ body {
     width: 200px; 
     height: auto;
 }
+/* CSS for mobile and small screen devices */
+@media only screen and (max-width: 480px) {
+    .legendary-products {
+        justify-content: center; 
+    }
+    .legendary-products .legendary-product {
+        width: 60%; 
+        box-sizing: border-box; 
+        margin-left: auto;
+    }
+    .legendary-products .legendary-product:nth-child(n+3) {
+        display: none; 
+    }
+}
 
 /* Styling for the further information section of index page */
 
@@ -496,7 +509,11 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
-
+@media only screen and (max-width: 480px) {
+    .further-info {
+        width: 90%; 
+    }
+}
 /* Contact form styling */
 
 .site-contact-form {
@@ -515,6 +532,12 @@ body {
 .site-contact-form input, .site-contact-form textarea {
     width: 100%;  
     box-sizing: border-box;  
+}
+
+@media only screen and (max-width: 480px) {
+    .site-contact-form {
+        width: 90%; 
+    }
 }
 
 /* Checkout page styling */
