--- a/ecommerce/catalog/static/catalog/css/style.css
+++ b/ecommerce/catalog/static/catalog/css/style.css
@@ -343,6 +343,14 @@ body {
     opacity: 0.9;
 }
 
+/* CSS for mobile and small devices */
+@media only screen and (max-width: 480px) {
+    .user-registration {
+        width: 90%;
+        padding: 10px;
+    }
+}
+
 
 /* Styling for the product page */
 
@@ -351,10 +359,10 @@ body {
     color: white;
     font-size: 30px;
     text-align: center;
-    padding: 5px; /* Reduce the padding */
+    padding: 5px; 
     height: 200px; 
     display: block;  
-    margin-bottom: 0; /* Add this line */
+    margin-bottom: 0; 
 }
 
 .product-category-title {
@@ -362,11 +370,11 @@ body {
     color: white;
     font-size: 30px;
     text-align: center;
-    padding: 5px; /* Reduce the padding */
+    padding: 5px; 
     background-size: cover; 
     background-repeat: no-repeat;
     text-decoration: underline;
-    margin-top: 0; /* Add this line */
+    margin-top: 0; 
 } 
 
 .product-list {
@@ -389,7 +397,20 @@ body {
     width: 100px; 
     height: auto;
 }
+@media only screen and (max-width: 480px) {
+    .product-item {
+        width: 80%; 
+        height: auto; 
+        border-radius: 0; 
+        margin: 10px auto; 
+    }
+    .product-image {
+        width: 50px; 
+        height: auto; 
+    }
+}
 
+/* CSS basic rules for no products */
 .no-products {
     color: red;
     font-weight: bold;
@@ -540,29 +561,6 @@ body {
     }
 }
 
-/* Checkout page styling */
-
-
-/* Checkout basket styling */
-.checkout-basket {
-    background-color: white;
-    color: black;
-    font-family: "Exo 2", sans-serif;
-    width: 50%; 
-    margin: 0 auto; 
-    padding: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.checkout-basket ul {
-    list-style-type: none; 
-    padding: 0; 
-}
-
-.checkout-basket li {
-    margin-bottom: 20px; 
-}
-
 /* Stripe form styling */
 
 .payment-form {
@@ -644,6 +642,23 @@ body {
     margin: 0 auto;  
 }
 
+@media only screen and (max-width: 480px) {
+    .review-form {
+        width: 90%; 
+        padding-left: 10px; 
+    }
+    .review-form textarea {
+        width: 90%; 
+        height: 150px; 
+    }
+    .product-reviews {
+        max-width: 90%; 
+        padding-left: 10px; 
+    }
+    .product-reviews img {
+        width: 90%; 
+    }
+}
 /* Styling for the edit review page */
 
 .edit-review-form {
@@ -672,6 +687,71 @@ body {
     text-align: center;
     opacity: 0.9;
 }
+
+/* CSS for mobile and small devices */
+@media only screen and (max-width: 480px) {
+    .edit-review-form {
+        width: 90%; /* Make the form take up 90% of the screen width */
+        padding-left: 10px; /* Reduce the left padding */
+    }
+    .edit-review-form textarea {
+        width: 90%; 
+        height: 150px; 
+    }
+}
+/* Checkout page styling */
+
+
+/* Checkout basket styling */
+.checkout-basket {
+    background-color: white;
+    color: black;
+    font-family: "Exo 2", sans-serif;
+    width: 50%; 
+    margin: 0 auto; 
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.checkout-basket ul {
+    list-style-type: none; 
+    padding: 0; 
+}
+
+.checkout-basket li {
+    margin-bottom: 20px; 
+}
+/* CSS for mobile and small devices */
+@media only screen and (max-width: 480px) {
+    .checkout-basket {
+        width: 90%; /* Make the basket take up 90% of the screen width */
+        padding: 30px; /* Increase the padding */
+        font-size: 1.2em; /* Increase the font size */
+    }
+    .checkout-basket li {
+        font-size: 1.2em; /* Increase the font size */
+    }
+}
+
+/* Payment Success (charge.html) styling */
+.payment-received-notice {
+    font-family: "Exo 2", sans-serif;
+    color: white;
+    text-align: center;
+    background-color: rgb(68, 37, 117);
+    padding: 20px;
+    margin: 0 auto;
+    width: 50%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    opacity: 0.9;
+}
+
+@media only screen and (max-width: 480px) {
+    .payment-received-notice {
+        width: 85%; /* Make it take up 85% of the screen width */
+    }
+}
+
 
 .site-footer a {
     margin-right: 10px; 
