--- a/ecommerce/catalog/templates/catalog/charge.html
+++ b/ecommerce/catalog/templates/catalog/charge.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Payment Successful</title>
-</head>
-<body>
+{% extends 'catalog/base.html' %}
+
+{% block content %}
+
+<section class="payment-received-notice">
     <h1>Thank you for your purchase!</h1>
     <p>Your payment was successful.</p>
     <p><a href="{% url 'products' %}">Continue Shopping</a></p>
-</body>
-</html>
+</section>
+
+{% endblock %}
