--- a/ecommerce/catalog/templates/catalog/payment.html
+++ b/ecommerce/catalog/templates/catalog/payment.html
@@ -10,19 +10,9 @@
 <body>
     <!-- Page Header -->
     <header class="site-header">
-        <h1>COSMIC COMMERCE</h1>
+       
     </header>
-    <section class="site-nav">
-        <nav>
-            <ul>
-                <li><a href="{% url 'index' %}">Home</a></li>
-                <li><a href="{% url 'register' %}">Register</a></li>
-                <li><a href="{% url 'products' %}">Products</a></li>
-                <li><a href="{% url 'checkout' %}">Checkout</a></li>
-                
-            </ul>
-        </nav>
-    </section>
+
 
     <!-- Checkout Basket -->
     <div class="checkout-basket">
@@ -62,9 +52,10 @@
     <!-- Payment Form -->
     
     <!-- Stripe.js Library -->
-    <script src="https://js.stripe.com/v3/"></script>
-    <!-- Include JavaScript file -->
-    <script type="module" src="{% static 'catalog/js/script.js' %}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://js.stripe.com/v3/"></script>
+<!-- Include JavaScript file -->
+<script type="module" src="{% static 'catalog/js/script.js' %}"></script>
     
 </body>
 </html>
